create new dataframe and add city_state column

--- a/output/example_homework.Rmd
+++ b/output/example_homework.Rmd
@@ -37,3 +37,13 @@ raw_data <- read_csv("../data/homicide-data.csv",
 
 ---
 
+# Manipulate raw data
+
+```{r}
+homicide_data <- raw_data %>%
+                 mutate(city_name = paste0(city, ", ", state))
+```
+
+---
+
+
